Fixing prompt overflow on small devices

--- a/src/components/prompt-template/index.module.scss
+++ b/src/components/prompt-template/index.module.scss
@@ -47,7 +47,7 @@ label {
   border-radius: 3rem;
   border: 0.15rem solid white;
   transition: border-color 0.2s ease;
-  width: auto;
+  width: 250px;
   padding-left: 1rem;
   margin-bottom: 2rem;
 
